<?xml version="1.0"?>
<package format="3">
  <name>dh_ag95_controllers</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface for DH-Robotics AG-95.</description>
  <maintainer email="lihao_0630@qq.com">tdc</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="dh_ag95_controllers_plugin.xml"/>
  </export>
</package>
