<?xml version="1.0"?>
<package format="3">
  <name>dh_ag95_msgs</name>
  <version>0.1.0</version>
  <description>Messages, services and actions for DH-Robotics AG-95 ROS2 driver.</description>
  <maintainer email="lihao_0630@qq.com">tdc</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
