<?xml version="1.0"?>
<package format="3">
  <name>dh_ag95_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 node driver for DH-Robotics AG-95.</description>
  <maintainer email="lihao_0630@qq.com">tdc</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>dh_ag95_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
